<resources>
    <string name="app_name">Zenefit_Android</string>

    <string name="common_finish">완료</string>
    <string name="common_okay">확인</string>
    <string name="common_delete">삭제하기</string>
    <string name="common_delete_all">모두 삭제</string>

    <!-- 로그인 -->
    <string name="login_social_start">SNS 계정으로 간단하게 시작하기</string>

    <!-- 회원가입 -->
    <string name="sign_up_earn_ten_thousand">만원</string>
    <string name="sign_up_success">회원가입 완료</string>
    <string name="sign_up_welcome">회원가입을 환영합니다</string>
    <string name="sign_up_welcome_nickname">%s님!</string>

    <!-- 복지정책 찾기 -->
    <string name="find_policy_title">당신만을 위한\n복지 정책을 찾고 있어요…</string>
    <string name="find_policy_sub_title">금방 찾아드릴게요!</string>
    <string name="find_policy_title_after_3sec">당신만을 위한\n복지 정책을 준비하고 있습니다</string>
    <string name="find_policy_sub_title_after_3sec">잠시만 기다려주세요!</string>

    <string name="result_policy_title_when_available">%s님이 신청할 수 있는\n정책을 %d가지 찾았어요!</string>
    <string name="result_policy_sub_title_when_available">%s님이 받을 수 있는 금액도\n모두 계산이 끝났어요</string>
    <string name="result_policy_btn_when_available">모두 확인하기</string>

    <string name="result_policy_title_when_empty">%s님이 신청할 수 있는\n정책을 못 찾았어요..</string>
    <string name="result_policy_sub_title_when_empty">조건을 다시 설정하고 신청해보세요..</string>
    <string name="result_policy_btn_when_empty">다시 찾아보기</string>

    <!-- 매뉴얼 -->
    <string name="manual_first_title">지금 받을 수 있는 혜택 중에\n가장 좋은 혜택을 찾으세요!</string>
    <string name="manual_second_title">찾아주는 나의 정책</string>
    <string name="manual_second_sub_title">입력한 개인정보로 신청가능 여부를 판단해주고\n예상 수혜 금액이 높은 정책을 먼저 추천드려요!</string>
    <string name="manual_third_title">관심 있는 정책 신청 관리</string>
    <string name="manual_third_sub_title">달력에서 신청 시작일과 마감일을 보여드려요\nD-day를 설정하면 Push 알림을 보내드려요!</string>
    <string name="manual_fourth_title">나의 유형과 개인 설정</string>
    <string name="manual_fourth_sub_title">나는 혜택을 잘 챙기고 있는지 유형으로 알려줘요!\n개인정보를 추가하면 더 많은 정책을 추천드려요</string>
    <string name="manual_fifth_title">수혜중인 정책 관리</string>
    <string name="manual_fifth_sub_title">이미 수혜중이거나 신청을 완료한 정책은\n체크표시를 눌러 따로 모아 보세요!</string>

    <!-- 홈 -->
    <string name="home_user_nickname_level">%s님은\n%s에요</string>

    <string name="dummy_grade">또래 친구들 중 상위 %d로 앞서 가고 있어요</string>

    <string name="home_interest_policy">관심 등록</string>
    <string name="home_benefit_policy">수혜 정책</string>
    <string name="home_policy_count">개</string>

    <string name="home_recommend_policy">정책 추천</string>
    <string name="home_policy_apply">신청하기</string>
    <string name="home_deadline_policy">신청 마감일</string>
    <string name="home_deadline_until_date">%s 까지</string>

    <!-- 관심등록 & 수혜 정책 -->
    <string name="interest_policy">관심 등록 중인 정책</string>
    <string name="benefit_policy">수혜 중인 정책</string>
    <string name="interest_benefit_policy_count">%d개</string>
    <string name="interest_calendar_notice">관심 정책은 달력에도 추가됩니다.</string>
    <string name="interest_policy_deadline">%s 까지</string>
    <string name="benefit_policy_benefit">%d만원</string>

    <!-- 정책 -->
    <string name="monthly_benefit_money_apply">월 %s만원 신청하기</string>

    <!-- 정책 리스트 -->
    <string name="policy_list_edt_hint">찾으시려는 복지를 검색하세요.</string>

    <!-- 정책 상세 -->
    <string name="policy_detail_benefit_title_when_can_apply">%s을 신청하면\n월 %d만원 정도를 받을 수 있어요</string>
    <string name="policy_detail_benefit_title_when_cant_apply">%s은 신청할 수 없어요</string>
    <string name="policy_detail_introduction">서비스 소개</string>
    <string name="policy_detail_apply_documents">신청 서류</string>
    <string name="policy_detail_apply_method">신청 방법</string>
    <string name="policy_detail_apply_date">신청 기간</string>

    <string name="apply_now">지금 신청하기</string>
    <string name="see_more_detail">상세 조회</string>
    <string name="add_to_interest_policy">관심 정책 등록하기</string>
    <string name="already_in_interest_policy">관심 정책 등록완료</string>

</resources>